Fixed z-index for switch and color picker
https://metabox.io/support/topic/metabox-height-not-expanding/

--- a/css/color.css
+++ b/css/color.css
@@ -3,6 +3,6 @@
 }
 .rwmb-color-wrapper .wp-picker-holder {
 	position: absolute;
-	z-index: 9;
+	z-index: 99;
 	min-width: 255px;
 }
